@@ -1,9 +1,9 @@
-AUX sagan.confd 337 RMD160 2171b4c918262a28601182dc4e063726ff44f47a SHA1 dad8d9b4a274f08de3a93836260387e0227b4ccf SHA256 3c050d4bb72f3f338e1b911c3ecf9c412607e14853360b92f5fb6b6af269ac91
-AUX sagan.init 302 RMD160 a22f89a66c551bf875dd73f3e75f80d14eb4f059 SHA1 c9d540a93db9f20ffa2c707753cd16ef7b5b48e6 SHA256 d80296a8968f43283e3feead67f98b187326a054c3e4f28fc3b02c23de999ede
+AUX sagan.confd 273 RMD160 1856c35ff3957f74342f61eb0f95ab526ad4bdd9 SHA1 3e3b60b1a8ef24d432dc224a71f70d8004a79c33 SHA256 dce134a4d4337fa7f9240556a7d50da7cc624ee74a9ea16fcc2528caa73973d0
+AUX sagan.init 359 RMD160 7a40fddaddfdf0f37a159e3fe19596cc97620002 SHA1 cda3294ad43848fd0e41aa68730b09b4d6c9e0a2 SHA256 2f62664907dbe7f1fb0640c2e17f1e8bf216c1dc9bd7d9bd921573b997c7daad
 DIST sagan-0.1.6.tar.gz 171743 RMD160 e340c2b35f6c3c674020968c76613b4ba8a44212 SHA1 c2468458d34b1f157294b47ac48b69c0a16b7c34 SHA256 5c293b28a2a4c046864efb3a148a49044a38839c90473d7b546c913e88714b9a
 DIST sagan-0.1.7.tar.gz 172332 RMD160 1eb2010a562a8de425646c73ad2ca678adf97cb7 SHA1 ed50082f1cb7749e1a1bb23f12b2e4b6a76a656a SHA256 49dc33ae92576f8525b4b680610702a142be1b2b3b9d4660db4ff30168e3db61
 EBUILD sagan-0.1.6.ebuild 1687 RMD160 96f1842abba5688867372f05ff058a8c595e12f0 SHA1 b66de5d85efebfede995e3ff2975f975ece831a9 SHA256 9276a45da80f22a3c03568819b2eb7bd9392a4f16158bb2ace44ba3bb989e785
 EBUILD sagan-0.1.7.ebuild 1756 RMD160 44e73727816231d3564d54ca8ccb83e7c2c1c329 SHA1 5af8342236bccb879fb4ab109ae424ea034d8ef3 SHA256 80dcb9c055fff7d44f99be474843b066dec3a84ba8ee94d3a0a7be142daba040
-EBUILD sagan-9999.ebuild 1947 RMD160 8e6f427f3d6098f3c591b11212ac327bb59635ca SHA1 b8a5f84307a4a5c690ae6dc639c24121cfef453d SHA256 e056fc0b5f9d573370879ae39197569284ef98f4de6a7c688486c5374056d1af
-MISC ChangeLog 1333 RMD160 108ddfec58d44e00e9a000b2b851dffef676ae76 SHA1 980ea7082ea399a53eab2ab83d9ff4be48bb60bb SHA256 0f0de8ebc0e4bb2f8dfdd406e87cc0bc039ab8232bae4242d0ae0a77c92aa764
-MISC metadata.xml 414 RMD160 961d9ce55e5edbf6cfa6268d1db3db73e8ffa6d6 SHA1 aeb2a97b04f8e1fb9a51891923f8989c95d68e03 SHA256 9ba0a056a3b7c7f748737103a20d90035582a3dec6d8289d48d491488dc71321
+EBUILD sagan-9999.ebuild 2158 RMD160 3e128b0763f467f068e8073f6d3ea9cc46639d20 SHA1 f36f0ec41f1d1ad317e255d68147c57ae701fff7 SHA256 ab09e5f08c17270a5a1bbe39417d1136e914bb534572606b29552c7af588f074
+MISC ChangeLog 1450 RMD160 6699546112c1471736285cef56a19f0fd49307f2 SHA1 44b1d618ca2b9106ef8bfe1248ec6d4faa6325ac SHA256 ebf63a2678b267d7127251a471a18d516888259fb583034da454703c796c0640
+MISC metadata.xml 614 RMD160 9a2fbb289ba044663b3122a03095136ea234b2ac SHA1 b615cea2ce4469d0f5b61f84631165469cf5bf01 SHA256 baf7201c68bd3a1e15e9e28997bacaa1f34bf6cc6585828687d66064ae5f3e4e
